branches/dev/coreRefactor/app/webroot/css/style.css
/* ... */
	div.menu li.count_0 div.menu.level_1 {
		background: #486680;
	}
	div.menu.level_0 li:hover div.menu.level_1 {
		display: block;
	}

div.menu.level_1 ul {
	margin: 10px 0;
	padding: 0;
	border: 0;
	background: none;
}
div.menu.level_1 li {
	min-width: 200px;
	margin: 0;
	padding: 6px 10px 6px 20px;
	border: 0;
	background: none;
	color: #dde8f2;
	height: auto;
	border-top: 1px dotted #999;
}
div.menu.level_1 li.not_allowed {
	background-color: #41515f;
	color: #99a;
}
div.menu.level_1 li a {
	font-weight: normal;
	text-transform: none;
	text-decoration: none;
	color: #dde8f2;

	font-size: 11px;
	line-height: 1.1em;
	padding-left: 20px;
}
div.menu.level_1 li:hover { 
	background-color: #293B49; 
	color: #fff; 
}
div.menu.level_1 li:hover a:not(.not_allowed) { 
	text-decoration: underline;
	color: #fff; 
}
div.menu.level_1 li.not_allowed:hover { 
	background-color: #41515f; 
	border-top: 1px solid #ccc; 
}
	
/*===========================================================*
	-= summary styles
*===========================================================*/
div.menu ul#summary {
	position: absolute;
	top: 0;
	right: 0;
	margin: 0 -10px 0 0;
	padding: 0;
	background: none;
	cursor: help;
}
div.menu ul#summary li {
	background: none;
	padding: 0;
	margin: 0;
}


.summaryBtn{
	position: relative;
	
	display: block;
	/* font-weight: bold; */
	font-size: 12px;
	/* text-transform: uppercase; */
	text-decoration: none;
	color: #fff;
	margin-top: 5px;
	padding: 28px 10px 5px 12px;
	background: url("../img/icons/summary_icon_bk.png") no-repeat left bottom;
}


	div.menu ul#summary li:hover span {
		color: #fff;
	}
	
div.menu ul#summary li ul {
	display: none;
	top: 50px;
	right: 20px;
	position: absolute;
	background: #293B49;
	margin: 0;
	padding: 10px;
	z-index: 1000;
	-moz-border-radius: 7px; 
	border-radius: 7px; 
	
	/*
		z-index: 20;
	*/
}


div.menu ul#summary ul li{
	width: 300px;
	margin: 0;
	padding: 5px 10px 15px 10px;
	border: 0;
	border-top: 1px dotted #eee;
	background: none;
	color: #fff;
	height: auto;
}


		div.menu ul#summary ul li.count_0 {
			border: 0;
		}
		div.menu ul#summary ul li a {
			float: none;
			font-weight: normal;
			text-transform: none;
			color: #fff;
		}
div.menu ul#summary ul li dl {
	display: block;
	clear: both;
}
div.menu ul#summary ul span.list_header {
	display: block;
	margin: 0.25em 0 0.5em 0;
	font-size: 1.5em;
	color: #fff;
	padding-bottom: 10px;
}
	div.menu ul#summary ul dl dt {
		margin: 0; 
		padding: 0.25em 0;
		display: inline;
		clear: both;
		float: left;
		width: 50%;
		color: #EEE;
		border-top: 1px solid #374D61;
	}
	div.menu ul#summary ul dl dd {
		margin: 0; 
		padding: 0.25em 0;
		display: inline;
		float: right;
		text-align: right;
		width: 50%;
		color: #ccc;
		border-top: 1px solid #374D61;
	}
/*===========================================================*
	-= tables and forms
*===========================================================*/
span.tag {
	font-size: 100%;
}
span.help {
	position: relative;
	display: block;
	color: #99c;
	text-indent: -9999px;
	cursor: help;
	width: 20px;
	line-height: 20px;
	background: url("../img/icons/fam_fam_silk_help.png") no-repeat center center;
}
span.help:hover {
	
}
	span.help.error,
	span.help.error:hover {
		/* background: none; */
		color: #ccd;
		font-weight: normal;
		cursor: default;
		filter: alpha(opacity=30);
		-moz-opacity: 0.3;
		-khtml-opacity: 0.3;
		opacity: 0.3;
	}	
	div.error-message {
		display: none;
	}
	div.wrapper span.help div {
		display: none;
		white-space: normal;
	}
		div.wrapper td.help span.help:hover div, div.wrapper th span.help:hover div {
			display: block;
			text-indent: 0;
			top: 10px; right: 10px;
			position: absolute;
			width: 300px;
			padding: 8px 20px 8px 12px;
			width: 270px;
			background: #486680;
			color: #ccc;
			font-size: 11px;
			font-weight: normal;
			text-align: left;
			line-height: 1.3em;
			
			-moz-border-radius: 15px 0 15px 15px;
			border-radius: 15px 0 15px 15px;
		
			z-index: 200;
		}
		div.wrapper span.help div p {
			margin: 0 0 1em 0;
		}
		div.wrapper th.column_1 span.help div {
			top: 10px; left: 10px;
			-moz-border-radius: 0 15px 15px 15px;
			border-radius: 0 15px 15px 15px;
		}

	/* -= table.structure =- */
	div.wrapper form {
		overflow: auto;
	}
	div.wrapper table.structure {
		width: 100%;
		margin: 0;
		background-color: #fff;
		
		padding: 10px 0;
	}
		div.wrapper table.structure tr.pagination th {
			text-align: center;
		}
		div.wrapper table.structure td {
			vertical-align: top;
			padding: 10px 0;
		}
		div.wrapper table.structure td.label {
			width: 30%;
			font-weight: bold;
			color: #000;
		}
		div.wrapper table.structure td.content {
			color: #666;
		}
		div.wrapper table.structure td.help {
			text-align: right;
			padding: 3px 10px 0 0;
			width: 20px;
		}
		
		div.wrapper table.structure td.total_columns_1 { width: 100%; }
		div.wrapper table.structure td.total_columns_2 { width: 50%; }
		div.wrapper table.structure td.total_columns_3 { width: 33%; }
		div.wrapper table.structure td.total_columns_4 { width: 25%; }
		div.wrapper table.structure td.total_columns_5 { width: 20%; }
		
		div.wrapper div.message {
			padding: 1em;
			border-right: 1px solid #374D61;
			border-left: 1px solid #374D61;	
			background-color: #f00;
			color: #fff;
		}
		
		div.wrapper table.columns.index td, div.wrapper table.columns.detail td{ 
			padding: 0.5em 1em; 
			border-top: 1px solid #eaedf2; 
		}
		
				.descriptive_heading h4,
				.std_popup.question h4 { 
					background-color: #f2f2f2;
					margin: 0 0 0 0;
					padding: 1em 1em 0.25em 1em;
				
					font-size: 14px;
					font-weight: bold;
					color: #2d5069;
				}
			
				
				.descriptive_heading p,
				.std_popup.question p { 
					background-color: #f2f2f2;
					margin: 0 0 0 0;
					padding: 0 1em 1em 1em;
				
					color: #a9a9a9;
				}
/* ... */

